--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-family: 'Montserrat', sans-serif;
 }
 body {
-    background-color: #134F5C;
+    background-color: #3bbfdd;
     color: #D0E0E3;
 }
 
